--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -43,9 +43,9 @@
 \email{ryan.james@colorado.edu}
 \affiliation{Department of Computer Science, University of Colorado at Boulder, Boulder, Colorado 80309}
 
-\author{Nicole Sanderson}
-\email{}
-\affiliation{Mathematics Department, University of Colorado at Boulder, Boulder, Colorado 80309}
+\author{Nicole F. Sanderson}
+\email{nicole.sanderson@colorado.edu}
+\affiliation{Department of Mathematics, University of Colorado at Boulder, Boulder, Colorado 80309}
 
 \date{\today}
 \bibliographystyle{unsrt}
