--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -37,7 +37,7 @@
 
 \begin{document}
 
-\title{}
+\title{Mathematical Foundations of Computational Mechanics}
 
 \author{Ryan G. James}
 \email{ryan.james@colorado.edu}
