--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -54,7 +54,7 @@
 
 \begin{abstract}
 
-atoms for processes
+We make rigorous the extension of formal language theory to processes and further extend the theory to include atoms. 
 
 \vspace{0.1in}
 \noindent {\bf Keywords}:
