add a few macros

--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -63,6 +63,8 @@ We make rigorous the extension of formal language theory to processes and furthe
 
 \maketitle
 
+A language \Language, and a process \Process.
+
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
 
