--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -63,6 +63,9 @@ We make rigorous the extension of formal language theory to processes and furthe
 
 \maketitle
 
+\section{Notes}
+Formal language theory utilizes the notions of (left) quotients, (right) quotients, right languages, and left languages to characterize languages.  Our goal is to rigorously define analogous concepts in the realm of processes.  A language L is defined to be a subset of the free monoid on an alphabet SIGMA. The (left) quotient of a language L for a word "w" is defined to be $w^{-1}L = {x \| wx \in L\}$.
+
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
 
