use xspace in macros

--- a/macros.tex
+++ b/macros.tex
@@ -1,8 +1,9 @@
+\usepackage{xspace}
 
 % information theory
 \renewcommand{\H}[1]    {\ensuremath{\operatorname{H}\left[#1\right]}}
 \newcommand{\I}[1]    {\ensuremath{\operatorname{I}\left[#1\right]}}
 
 % processes
-\newcommand{\Language}  {\ensuremath{\mathcal{L}}}
-\newcommand{\Process}   {\ensuremath{\mathcal{P}}}
+\newcommand{\Language}  {\ensuremath{\mathcal{L}}\xspace}
+\newcommand{\Process}   {\ensuremath{\mathcal{P}}\xspace}
