--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -65,9 +65,16 @@ We make rigorous the extension of formal language theory to processes and furthe
 
 
 \section{Notes}
-Formal language theory utilizes the notions of (left) quotients, (right) quotients, right languages, and left languages to characterize languages.  Our goal is to rigorously define analogous concepts in the realm of processes.  A language \Language is defined to be a subset of the free monoid $\Sigma^{\star}$on an alphabet $\Sigma$. The (left) quotient of a language \Language for a word $w$ is defined to be $w^{-1}\Language = \{ x | wx \in \Language \}$.
+Formal language theory utilizes the notions of (left) quotients, (right) quotients, right languages, and left languages to characterize languages.  Our goal is to rigorously define analogous concepts in the realm of processes.  A language \Language is defined to be a subset of the free monoid $\Sigma^{\star}$on an alphabet $\Sigma$. The (left) quotient of a language \Language for a word $w$ is defined to be $w^{-1}\Language = \{ x | wx \in \Language \}$. 
 
-A process \Process is defined as 
+A process \Process is defined to be $\{\subseteq \Sigma^{\mathbb{Z}}, \mu\}$ where $\Sigma^{\mathbb{Z}}$ is the set of bi-infinite strings over the alphabet $\Sigma$ and $\mu$ is a shift-invariant measure on this space.  
+
+Our working definitions are as follows: 
+
+The (left) quotient of a process \Process is defined to be $\overleftarrow{w} \Process 
+= \{ \{\overrightarrow{x}, \mu_{\overleftarrow{w}} \} | \mu(\overleftarrow{w}\overrightarrow{x}) \neq 0 \}$. 
+
+We are thinking that we want $\mu_{\overleftarrow{w}}$ to be something like the sum over states we can be in after having seen $\overleftarrow{w}$ of the probability of seeing $\overrightarrow{x}$ from that state} times the probability of being in that state.  We'll need to make sure this is actually a measure, and we want this quotient to include the data of both the support as well as a probability distribution.  
 
 
 \bibliographystyle{unsrt}
