--- a/macros.tex
+++ b/macros.tex
@@ -7,3 +7,6 @@
 % processes
 \newcommand{\Language}  {\ensuremath{\mathcal{L}}\xspace}
 \newcommand{\Process}   {\ensuremath{\mathcal{P}}\xspace}
+
+\newcommand{\leftword}  {\overleftarrow{w}}
+\newcommand{\rightword}  {\overrightarrow{x}}
