to do list for defining etomata

--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -97,6 +97,14 @@ Define Co-regular processes: We're calling processes with a finite epsilon-machi
 
 **Gac's-Korner information, mutual information is not a random variable 
 
+TO GET ETOMATA OF PROCESS:
+1) Start with epsilon machine
+2) Reverse 
+3) Mixed State (i.e. determinize, unifilarize)
+4) Reverse (in general, loose unifilarity)
+
+*define ``Reverse'' formally in terms of the limiting set of word probabilities for the reverse words at each length, prove that that coincides with just switching arrows of a presentation
+
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
 
