--- a/macros.tex
+++ b/macros.tex
@@ -9,4 +9,7 @@
 \newcommand{\Process}   {\ensuremath{\mathcal{P}}\xspace}
 
 \newcommand{\leftword}  {\overleftarrow{w}}
-\newcommand{\rightword}  {\overrightarrow{x}}
+\newcommand{\rightword} {\overrightarrow{x}}
+
+\newcommand{\emachine}        {$\epsilon$-machine\xspace}
+\newcommand{\etomata}   {$\epsilon$tomata\xspace}
