--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -71,6 +71,7 @@ Goals:
   \item define the ``regular'' processes: those with a finite number of future morphs
   \item define co-regular processes
   \item if \etomata is unifilar, is it isomorphic to the \emachine?
+  \item is the reverse of a co-unifilar \emachine the \emachine for the reverse process?
 \end{enumerate}
 
 \section{Notes}
