add one more goal

--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -67,11 +67,12 @@ Goals:
 \begin{enumerate}
   \item What are the atoms of a process?
   \item conjecture: $h_\mu$ can be calculated in closed form from any atomic presention, e.g. $h_\mu = \sum \pi_i \H{\textrm{future morph}_i}$.
-  \item formally define the \etomata
-  \item define the ``regular'' processes: those with a finite number of future morphs
-  \item define co-regular processes
+  \item formally define the \etomata.
+  \item define the ``regular'' processes: those with a finite number of future morphs.
+  \item define co-regular processes.
   \item if \etomata is unifilar, is it isomorphic to the \emachine?
   \item is the reverse of a co-unifilar \emachine the \emachine for the reverse process?
+  \item define ``(future) state morphs'', the future morph generated from a state.
 \end{enumerate}
 
 \section{Notes}
