note to find reference for conditional distribution computation

--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -111,6 +111,8 @@ TO GET ETOMATA OF PROCESS:
 
 Future Morphs of a Process:
 Ryan: Conditional distribution; conditioned on a past $\leftword$ having occurred, this is the distribution over futures $\{ \rightword\}$.  
+How do we compute this conditional distribution for a given process, or presentation of a process? 
+Let's find a reference to see how they compute conditional distributions over bi-infinite strings.
 
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
