forbidden blocks as starting point

--- a/compmech_foundations.tex
+++ b/compmech_foundations.tex
@@ -124,6 +124,9 @@ Analogously, we define an atom of a process \Process to be $\widetilde{F_0} \cap
 NOW: What does $\overline{F_i}$ mean?
 What does $\widetilde{F_i} \cap \widetilde{F_j}$ mean? 
 
+Start from definition of a process \Process as a subshift of the full shift $\Sigma^{\mathbb{Z}}$, where $\Process = P_{F}$ and $F$ is the collection of forbidden blocks.  Should we consider complements and intersections by looking at these collection of forbidden blocks? 
+*claim: complements of subshifts of finite type are not of finite type
+** intersection of future morphs as union of F-sets
 
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
